# port-whisperer

./: .gitignore  README.md  package-lock.json  package.json
.planning/phases/01-rust-reimplementation/: 01-RESEARCH.md  PLAN.md
rust/: Cargo.toml
rust/src/: cli.rs  lib.rs  main.rs  runner.rs  types.rs
rust/src/collector/: docker.rs  git.rs  mod.rs  ports.rs  processes.rs
rust/src/display/: banner.rs  detail.rs  mod.rs  table.rs  tui.rs  watch.rs
rust/src/enricher/: framework.rs  mod.rs  status.rs
rust/src/platform/: mod.rs  unix.rs  windows.rs
src/: display.js  index.js  scanner-shared.js  scanner-unix.js  scanner-windows.js  scanner.js
test/: scanner-shared.test.js
