[package]
name = "port-whisperer"
version = "0.1.0"
edition = "2021"
default-run = "ports"

[[bin]]
name = "ports"
path = "src/main.rs"

[features]
watch = ["tokio", "ratatui", "crossterm"]

[dependencies]
netstat2 = "0.11"
sysinfo = "0.38"
clap = { version = "4.6", features = ["derive"] }
rayon = "1.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1"
comfy-table = "7.2"
dialoguer = "0.12"
indicatif = "0.18"
regex = "1.11"
once_cell = "1.20"

tokio = { version = "1.51", features = ["rt", "rt-multi-thread", "time", "macros"], optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }
